--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,7 +1,7 @@
 /* File ini digunakan untuk menimpa gaya default tema Chirpy */
 
 // Mengubah warna link dan aksen utama menjadi biru muda
-$link-color: #047ac9;
+// $link-color: #000000;
 
 // Anda juga bisa mengubah warna lain jika tahu nama variabelnya.
 // Contoh: Mengubah warna teks judul post
